<resources>
    <!-- Title for the application. -->
    <string name="app_name">eresViewer</string>

    <!-- MainActivity label. -->
    <string name="mainAct_label">Co chcesz zrobić?</string>

    <!-- Category name for marks -->
    <string name="category_marks">Oceny</string>

    <!-- Category name for plan -->
    <string name="category_plan">Oceny</string>

    <!-- Category name for settings -->
    <string name="category_settings">Ustawienia</string>

    <!-- Category name for adding new mark -->
    <string name="category_add">Dodaj ocenę</string>

    <!-- name label for topBar in activity_subject -->
    <string name="topbar_name">Nazwa</string>

    <!-- My mark label for topBar in activity_subject -->
    <string name="topbar_myMark">Moja ocena</string>

    <!-- lower mark label for topBar in activity_subject -->
    <string name="topbar_lower">Min.</string>

    <!-- average mark label for topBar in activity_subject -->
    <string name="topbar_average">średnia</string>

    <!-- higher mark label for topBar in activity_subject -->
    <string name="topbar_higher">Max.</string>

    <!-- amount of marks label for topBar in activity_subject -->
    <string name="topbar_amount">L.ocen</string>

    <!-- Top string in activity_login-->
    <string name="login_top_string">Zaloguj się</string>
    <!-- login string in activity_login-->
    <string name="login_string">Nazwa użytkownika</string>
    <!-- password string in activity_login-->
    <string name="password_string">Hasło</string>

    <!--ERES URL address to current term-->
    <string name="main_page_URL">https://studia.elka.pw.edu.pl/pl/17L/</string>
    <!-- adres głównej strony serwera studia do obecnego semestru-->
    <string name="login_info_string">Nieprawidłowa nazwa użytkownika lub hasło.</string>

    <!-- Initialization vector name in sharedPreferences for login encryption -->
    <string name="login_IV">initialization_vector_for_login</string>

    <!-- Initialization vector for password encryption -->
    <string name="password_IV">initialization_vector_for_password</string>

    <!--preferences file name -->
    <string name="preferences_name">MyPrefs</string>

    <!-- login string -->
    <string name="singin_form_login">singin_form_login</string>

    <!-- password string -->
    <string name="singin_form_password">singin_form_password</string>

    <!-- button string in activity_login -->
    <string name="login_button">Zaloguj się</string>

    <!-- my marks page in studia.elka.pw.edu.pl -->
    <string name="myMarksPage">"https://studia.elka.pw.edu.pl/pl/term/subject/info/"</string>

    <string name="moja_ocena">moja ocena</string>
    <string name="nazwa_oceny">nazwa oceny</string>
    <string name="dane_oceny">dane oceny</string>
    <string name="ocena_min">ocena min.</string>
    <string name="rednia_ocena">średnia ocena</string>
    <string name="ocena_max">ocena max.</string>
    <string name="liczba_ocen">liczba ocen</string>
    <string name="usu">Usuń</string>
    <string name="zapisz">Zapisz</string>

    <string name="editor_insert_pet_failed">"Insert failed!"</string>
    <string name="editor_insert_pet_successful">"Insert successful!"</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_one">Hello blank fragment one</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next">Dalej</string>
    <string name="back">Wróć</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>>


</resources>
