<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/separatorColor"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/defaultContentStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/myMarkLdabel"
            android:text="@string/topbar_myMark"
            style="@style/regularSpreadItemsInRow" />

        <TextView
            android:id="@+id/minLdabel"
            android:text="@string/topbar_lower"
            style="@style/regularSpreadItemsInRow"
         />

        <TextView
            android:id="@+id/averageLdabel"
            android:text="@string/topbar_average"
            style="@style/regularSpreadItemsInRow" />

        <TextView
            android:id="@+id/higherLdabel"
            android:text="@string/topbar_higher"
            style="@style/regularSpreadItemsInRow" />

        <TextView
            android:id="@+id/amountLdabel"
            android:text="@string/topbar_amount"
            style="@style/regularSpreadItemsInRow" />
    </LinearLayout>


    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/listview_mark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</LinearLayout>

</android.support.constraint.ConstraintLayout>