<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/minLdabel"
            style="@style/regularSpreadItemsInRow"
            android:text="@string/topbar_lower" />

        <TextView
            android:id="@+id/averageLdabel"
            style="@style/regularSpreadItemsInRow"
            android:text="@string/topbar_average" />

        <TextView
            android:id="@+id/higherLdabel"
            style="@style/regularSpreadItemsInRow"
            android:text="@string/topbar_higher" />

        <TextView
            android:id="@+id/amountLdabel"
            style="@style/regularSpreadItemsInRow"
            android:text="@string/topbar_amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lowerMark"
            style="@style/regularSpreadItemsInRow"
            />

        <TextView
            android:id="@+id/averageMark"
            style="@style/regularSpreadItemsInRow"
            />

        <TextView
            android:id="@+id/higherMark"
            style="@style/regularSpreadItemsInRow"
            />

        <TextView
            android:id="@+id/amountOfMarks"
            style="@style/regularSpreadItemsInRow"
            />
    </LinearLayout>
</LinearLayout>