<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.maciek.eresviewer.MainActivity">

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:fontFamily="@string/MainActivityFont"
        android:text="@string/mainAct_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/separator"
        app:layout_constraintRight_toRightOf="parent" />

    <View android:id="@id/separator"
        android:background="@color/separatorColor"
         android:layout_width = "0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/mainTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
  />

    <TextView
        android:id="@+id/marksView"
        android:layout_height="wrap_content"
        android:text="@string/category_marks"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="30dp"
        android:fontFamily="@string/MainActivityFont"
        android:layout_width="0dp" />


    <TextView
        android:id="@+id/planView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:fontFamily="@string/MainActivityFont"
        android:padding="30dp"
        android:text="@string/category_plan"
        app:layout_constraintTop_toBottomOf="@+id/marksView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/settingsView"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="20sp"
        android:text="@string/category_settings"
        app:layout_constraintTop_toBottomOf="@+id/planView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@string/MainActivityFont"
        android:padding="30dp"
        />


</android.support.constraint.ConstraintLayout>
